2022-05-26  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.8-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.8-alpha02: fxm';git push
	git tag -a 5.0.8-alpha02 -m 'Vienna';git push --tags

	* Allow use of netCDF defined APIs for BZIP2, ZSTANDARD

	* Add netCDF 4.9.0 BLOSC filters to table

	* Implement nco_inq_filter_avail() and stubs for pre-4.9.0

	* Print info for multiple filters per variable separated by pipes

	* Remove extra quotes form multi-word format names in _Format attribute

2022-05-25  Charlie Zender  <zender@uci.edu>

	* Fix so CCR codecs work, including codec chains

2022-05-24  Charlie Zender  <zender@uci.edu>

	* Quiet hocus-pocus INFO message

	* Use nco_flt_glb_lss/lsl_alg/lvl values with CCR codecs

2022-05-23  Charlie Zender  <zender@uci.edu>

	* Add nco_flt_glb_lss/lsl_alg/lvl_get/set() helper functions

2022-05-22  Charlie Zender  <zender@uci.edu>

	* Update to MacOS 12.4

2022-05-18  Charlie Zender  <zender@uci.edu>

	* Compile/link (except ncap2) on perlmutter, runtime fails due to missing librca.so*

	* ncclimo/ncremap add draft NERSC Perlmutter settings

2022-05-04  Charlie Zender  <zender@uci.edu>

	* Complete refactoring to test more codecs with nco_tst_def_*() functions

	* Adopt nco_flt_def_*() in nco_var_utl.c

2022-05-03  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.8-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.8-alpha01: Functionally identical to 5.0.7';git push
	git tag -a 5.0.8-alpha01 -m 'QuickBlade';git push --tags

	* Adopt nco_flt_def_*() in nco_map.c, nco_cnv_arm.c, ncap_utl.c, nco_rgr.c, nco_s1d.c

2022-05-02  Charlie Zender  <zender@uci.edu>

	* Adopt nco_flt_def_wrp() in nco_grp_utl.c:nco_cpy_var_dfn_trv(),

	* NCO 5.0.7 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.7: all: bit_xpl_dbl=52, tkn rdf wrn; ncap2: where() mss_val; ncclimo: -P fix; ncremap: add_fll fix, sub-SGS nrm, sgs_nm_gnr wrn';git push
	git tag -a 5.0.7 -m 'Mariupol';git push --tags
